# users_crud_api_python

./: .commitlintrc.json  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  compose.build.yaml  compose.databases.yaml  compose.project.yaml  docker-compose.yaml  dockerfile  package-lock.json  package.json  pyproject.toml  readme.md  requirements.app.txt  requirements.dev.txt  setup.cfg  users_crud_api_python.code-workspace
configs/: api_server.json  server.json
docker_compose/: compose.project.build.yaml
docs/: users_crud_api_python.postman_collection.json
hooks/: commit-msg.sh  pre-commit.sh
raw_requirements/: requirements.app.txt  requirements.dev.txt
requirements/: app.txt  dev.txt
scripts/: dataframe.py
src/: large_process_admin.py  main.py  main.schema.graphql  main_router.py
src/artifacts/: config.py  logger.py  path_manager.py  singleton.py
src/artifacts/datetime/: datetime_provider.py
src/artifacts/env/: configs.py
src/artifacts/graphql/: custom_error_formatter.py  custom_scalars_serializer.py  error_formatter.py
src/artifacts/graphql_utils/: custom_error_formatter.py
src/artifacts/logging/: custom_logger.py
src/artifacts/logging_utils/: custom_logger.py
src/artifacts/path/: generator.py  path_generator.py
src/artifacts/path_utils/: path_generator.py
src/artifacts/pattern/: singleton.py
src/artifacts/threading/: managed_daemon.py
src/artifacts/threading_utils/: managed_daemon.py
src/artifacts/uuid/: uuid_provider.py
src/common_artifacts/: custom_logger.py  env_config.py  large_process_thread_admin.py  path_manager.py  singleton.py
src/common_artifacts/env_utils/: env_config.py
src/common_artifacts/graphql_utils/: custom_error_formatter.py
src/common_artifacts/logging_utils/: custom_logger.py
src/common_artifacts/metaclass/: singleton.py
src/common_artifacts/middlewares/: error_handler.py
src/common_artifacts/path_utils/: path_generator.py
src/common_artifacts/threading_utils/: managed_daemon.py
src/common_modules/custom_middlewares/: error_handler.py
src/common_modules/database/: postgres.py
src/common_modules/middlewares/: error_handler.py  logger.py
src/controllers/: health_check.py
src/database/: connection_manager.py
src/database/cache_database/: cache_provider.py  connection_manager.py
src/dtos/: health_check_dtos.py  tv_programmation_dtos.py  users_dtos.py
src/entities/: programmation_entity.py  users_entity.py
src/graphql_resolvers/: users_resolvers.py
src/graphql_routers/: users_router.py  users_schema.graphql
src/middlewares/: authentication_handler.py  database_health_check.py  error_handler.py  logger_contextualizer.py  logger_setup.py
src/resolvers/: cache_manager.py  resolvers_cache.py  users_resolvers.py
src/rest_controllers/: health_check_controller.py  tv_channel_controller.py
src/rest_routers/: health_check_router.py  tv_channel_router.py
src/services/: health_check_service.py
test/: test_artifacts.py
(+17 files in other folders)
