[tool.poetry]
name = "users_crud_api_python"
version = "1.14.0"
description = "A really simple CRUD GraphQL API based on Docker and Python."
authors = ["joseesco24 <josed.escobar@outlook.com>"]
readme = "readme.md"
packages = [{ include = "users_crud_api_python" }]

[tool.poetry.scripts]
pre_commit = "pre-commit install --hook-type pre-commit"
commit_msg = "pre-commit install --hook-type commit-msg"
post_commit = "pre-commit install --hook-type pre-push"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
psycopg2-binary = "^2.9.5"
SQLAlchemy = "^2.0.1"
loguru = "^0.7.0"
ariadne = "^0.20.0"
redis = "^4.4.2"
psutil = "^5.9.4"
pydantic = { extras = ["dotenv"], version = "^1.10.4" }
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1a1"
commit-linter = "^1.0.2"
mypy = "^1.0.0"
watchfiles = "^0.19.0"
pre-commit = "^3.1.1"
wrapt = "^1.14.1"
dill = "^0.3.6"
flake8 = "^6.0.0"
pytest = "^7.2.1"
conventional-pre-commit = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
