[tool.poetry]
name = "users_crud_api_python"
version = "1.15.0"
description = "A really simple CRUD GraphQL API based on Docker and Python."
authors = ["joseesco24 <josed.escobar@outlook.com>"]
readme = "readme.md"
packages = [{ include = "users_crud_api_python" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
psycopg2-binary = "^2.9.5"
SQLAlchemy = "^2.0.1"
loguru = "^0.7.0"
ariadne = "^0.20.0"
redis = "^5.0.0"
psutil = "^5.9.4"
pydantic = { extras = ["dotenv"], version = "^2.0.2" }
uvicorn = "^0.22.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1a1"
mypy = "^1.0.0"
watchfiles = "^0.20.0"
wrapt = "^1.14.1"
dill = "^0.3.6"
flake8 = "^6.0.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
